fix grey bar in left sidebar still visible -- change width to max-width

--- a/resources/css/nmsprime.css
+++ b/resources/css/nmsprime.css
@@ -587,6 +587,10 @@ table .index_check {
     display: block;
 }
 
+.sidebar .slimScrollDiv{
+    min-width: 100%;
+}
+
 li.expand div img {
     filter: none !important;
 }
